--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,5 @@ authors = ["Gordon Shieh <gordon.shieh94@gmail.com>"]
 [dependencies]
 bytes = "0.5.3"
 rust-crypto = "0.2.36"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
