--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,7 @@
 name = "dummycloud"
 version = "0.1.0"
 authors = ["Gordon Shieh <gordon.shieh94@gmail.com>"]
+edition = "2018"
 
 [dependencies]
 bytes = "0.5.3"
